# cmake-playground

./: .gitignore  README.md
src/BasicModule/: CMakeLists.txt  CMakePresets.json  README.md  a.cppm  main.cpp
src/BasicModule/submodules/: submodule1.ixx
src/DLL/: CMakeLists.txt  source.cpp  source.hpp
src/Subdirectory/: CMakeLists.txt  README.md
src/Subdirectory/src/: CMakeLists.txt  main.cpp
src/more-modules/: CMakeLists.txt  main.cpp  testmodule.ixx
src/more-modules/submodules/: submodule2.ixx
src/more-modules/submodules2/: CMakeLists.txt  submodule3.ixx
src/stdmod/: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
src/visualstudio/: CMakeLists.txt  CMakePresets.json  main.cpp
